--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -27,8 +27,8 @@
 </head>
 <body>
   <div class="fullscreen-bg">
-    <video loop muted autoplay poster="../../img/poster.png" class="fullscreen-bg__video">
-        <source src="../../img/th.mp4" type="video/mp4">
+    <video loop muted autoplay class="fullscreen-bg__video">
+        <source src="../../img/Headspace.mp4" type="video/mp4">
     </video>
   </div>
   <div class="row z-depth-2" id="header">
@@ -82,7 +82,7 @@
       <h1 class="z-depth-2">User Analysis</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p><a class="linker1" href="https://docs.google.com/spreadsheets/d/14LdSv71p-_gJ5PhWDTZmcei3sGDCRJ_ApLR5mcUSXt8/edit?usp=sharing" target="_blank">Analysis</a> showed that users who meditate more regularly find it easier to maintain the habit. Isolating reasons that users struggle would help to inform stronger features to promote routine. By distilling responses into composite dimensions, I found that respondents fell into one of three groups. Understanding the characteristics of each group allowed me to build personas that would become the foundation for driving higher retention.</p>
+      <p><a class="linker1" href="https://docs.google.com/spreadsheets/d/14LdSv71p-_gJ5PhWDTZmcei3sGDCRJ_ApLR5mcUSXt8/edit?usp=sharing" target="_blank">Analysis</a> showed that users who meditate more regularly find it easier to maintain the habit. Isolating reasons that users struggle would help to inform features that encourage a healthy routine. By distilling responses into composite dimensions, I found that respondents fell into one of three groups. Understanding the characteristics of each group allowed me to build personas that would become the foundation for driving higher retention.</p>
     </div>
     <div class="col s12">
       <center>
@@ -93,42 +93,42 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Define the Problem</h1>
+      <h1 class="z-depth-2">Problem & Opportunity</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p></p>
+      <p>For each persona there was a story — from each story, a unique problem to solve. Prioritizing based on potential opprtunity, I chose to focus on the group that represented almost half of users. Survey responses showed that this subset wanted a personalized feel; they had an appetite for free, varied content and a sense of community.</p>
     </div>
     <div class="col s12">
       <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-5"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-6"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-5"></div>
       </center>
     </div>
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Wireframe Concepts</h1>
+      <h1 class="z-depth-2">Market Validation</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>As the glue between designers, developers, and management - it's important to establish a shared vision. Wireframing lets stakeholders visualize success, but more importantly, it provides an opportunity to contribute by facilitating a discussion. Driving alignment beforehand ensures less re-work and higher quality once development begins.</p>
+      <p>An Indiana University <a class="linker1" href="https://www.ncbi.nlm.nih.gov/pubmed/8775648" target="_blank">study</a> showed that the attrition rate for people working toward a physical fitness goal in pairs was dramatically lower (85% lower, to be exact) than those working alone. It turned out users knew this intuitively, and were trying to synthesize a community on their own. Users' personal solutions often lead to the requirements for a better product.</p>
     </div>
     <div class="col s12">
       <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-7"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-6"></div>
       </center>
     </div>
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Build Product Roadmap</h1>
+      <h1 class="z-depth-2">Product Requirements</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>Envisioning a phased product launch can be tough, especially when it involves multiple functional groups and stakeholders. Roadmapping is critical to building consensus, attaining budget, and communicating progress to management. Documenting our goals, timeframe, and interdependencies made leading a cross-functional team, from concept to on-schedule launch, a seamless process.</p>
+      <p>Legendary MMA trainer Frank Shamrock stressed the importance of surrounding ourselves with the right people. His methodology suggests we need a mentor, an equal, and a protégé if we want to be sucessful. Following this approach, I propose a feature to circulate motivation & wisdom throughout the Headspace journey. By allowing users to learn and teach, they can stay accountable to themselves and their community.</p>
     </div>
     <div class="col s12">
       <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-8"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-9"></div>
+        <video loop muted autoplay class="z-depth-3" id="hs-image-7">
+          <source src="../../img/Headspace.mp4" type="video/mp4">
+        </video>
       </center>
     </div>
   </div>
