--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -132,6 +132,11 @@
       </center>
     </div>
   </div>
+  <div class="row container case">
+    <center>
+      <h1 class="z-depth-2" id="link-out">Click to see the live demo</h1>
+    </center>
+  </div>
   <div class="row" id="footer">
       <div class="col s12">
       <center>Designed & built with care by Taylor<br>
