--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -122,7 +122,7 @@
       <h1 class="z-depth-2">Product Requirements</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>Legendary MMA trainer Frank Shamrock stressed the importance of surrounding ourselves with the right people. His methodology suggests we need a mentor, an equal, and a protégé if we want to be sucessful. Following this approach, I propose a feature to circulate motivation & wisdom throughout the Headspace journey. By allowing users to learn and teach, they can stay accountable to themselves and their community.</p>
+      <p>Legendary MMA trainer Frank Shamrock stressed the importance of surrounding ourselves with the right people. His methodology suggests we need a mentor, an equal, and a protégé if we want to be successful. Following this approach, I propose a feature to circulate motivation & wisdom throughout the Headspace journey. By allowing users to learn and teach, they can stay accountable to themselves and their community.</p>
     </div>
     <div class="col s12">
       <center>
