--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -119,7 +119,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Product Requirements</h1>
+      <h1 class="z-depth-2">Feature Proposition</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>Legendary MMA trainer Frank Shamrock stressed the importance of surrounding ourselves with the right people. His methodology suggests we need a mentor, an equal, and a protégé if we want to be successful. Following this approach, I propose a feature to circulate motivation & wisdom across the Headspace journey. By allowing users to learn and teach, they can stay accountable to themselves and their community.</p>
@@ -134,7 +134,21 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2" id="link-out">Click to see the live demo</h1>
+      <h1 class="z-depth-2">Product Requirements</h1>
+    </center>
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>Delivered within the meditation progress timeline, this feature captures users' mindset each day before their session. User sentiment is recirculated, with each meditation preceeded by two collected snippets from the community — one from farther along in the journey, and one from an equal point. In this way, we establish a <a class="linker1" href="https://www.ted.com/talks/carol_dweck_the_power_of_believing_that_you_can_improve" target="_blank">growth mindset</a> where challenge is celebrated along the way by learning & sharing together.</p>
+    </div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-8"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-9"></div>
+      </center>
+    </div>
+  </div>
+  <div class="row container case">
+    <center>
+      <h1 class="z-depth-2 linker1" id="link-out">See a live demo here!</h1>
     </center>
   </div>
   <div class="row" id="footer">
