--- a/views/process.html
+++ b/views/process.html
@@ -101,7 +101,7 @@
     <div class="col s12">
       <center>
         <div class="case-block case-block-image z-depth-3" id="cb-image-5"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-6"></div>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-3"></div>
       </center>
     </div>
   </div>
