--- a/css/style.css
+++ b/css/style.css
@@ -731,3 +731,9 @@ ul.menu ul li {
   background-size: cover;
   padding: 0;
 }
+
+#work-pane5 {
+  background-image: url('../img/ms-main1.png');
+  background-size: cover;
+  padding: 0;
+}
