--- a/views/work.html
+++ b/views/work.html
@@ -61,6 +61,14 @@
           </p>
         </div>
       </div>
+      <div class="col s12 work-pane" id="work-pane5">
+        <div class="darkness valign-wrapper">
+          <p class="valign">D3 Data Viz
+          <br>
+            <span>— view —</span>
+          </p>
+        </div>
+      </div>
     </div>
     <div class="col s5" id="work-pane-right">
       <div class="col s12 work-pane" id="work-pane2">
