--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -35,17 +35,19 @@
     <div class="col s1" id="picture"></div>
     <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
-     <!--  <ul class="menu carrot">
+      <ul class="menu carrot">
         <li><a id="main-list" href="#">learn_more</a>
           <ul>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Define User Problems</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Assess Product Opportunity</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Develop Product Requirements</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Wireframe Concepts</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmap</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">User Research</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">User Analysis</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Problem & Opportunity</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Market Validation</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Feature Proposition</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Product Requirements</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Live Demo</a></li>
          </ul>
         </li>
-      </ul> -->
+      </ul>
       <div class="link-icon resume z-depth-2"></div>
       <div class="white-box1"></div>
       <div class="link-icon linkedin z-depth-2"></div>
@@ -148,7 +150,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2 linker1" id="link-out">See a live demo here!</h1>
+      <h1 class="z-depth-2 linker1" id="link-out">Check Out the Demo in Action</h1>
     </center>
   </div>
   <div class="row" id="footer">
