--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -98,7 +98,7 @@
       <h1 class="z-depth-2">Problem & Opportunity</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>For each persona there was a story — from each story, a unique problem to solve. Prioritizing based on potential opprtunity, I chose to focus on the group that represented almost half of users. Survey responses showed that this subset wanted a personalized feel; they had an appetite for free, varied content and a sense of community.</p>
+      <p>For each persona, there was a story — from each story, a unique problem to solve. Prioritizing based on potential opportunity, I chose to focus on the group that represented almost half of users. Survey responses showed that this subset wanted a personalized feel; they had an appetite for free, varied content and a sense of community.</p>
     </div>
     <div class="col s12">
       <center>
@@ -111,7 +111,7 @@
       <h1 class="z-depth-2">Market Validation</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>An Indiana University <a class="linker1" href="https://www.ncbi.nlm.nih.gov/pubmed/8775648" target="_blank">study</a> showed that the attrition rate for people working toward a physical fitness goal in pairs was dramatically lower (85% lower, to be exact) than those working alone. It turned out users knew this intuitively, and were trying to synthesize a community on their own. Users' personal solutions often lead to the requirements for a better product.</p>
+      <p>An Indiana University <a class="linker1" href="https://www.ncbi.nlm.nih.gov/pubmed/8775648" target="_blank">study</a> showed that the attrition rate for people working toward a physical fitness goal in pairs was dramatically lower (85% lower, to be exact) than those working alone. It turned out users knew this intuitively; they were trying to synthesize a community on their own. Users' personal solutions often lead to the requirements for a better product.</p>
     </div>
     <div class="col s12">
       <center>
@@ -139,7 +139,7 @@
       <h1 class="z-depth-2">Product Requirements</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>Delivered within the meditation progress timeline, this feature captures users' mindset each day before their session. User sentiment is recirculated, with each meditation preceeded by two collected snippets from the community — one from farther along in the journey, and one from an equal point. In this way, we establish a <a class="linker1" href="https://www.ted.com/talks/carol_dweck_the_power_of_believing_that_you_can_improve" target="_blank">growth mindset</a> where challenge is celebrated along the way by learning & sharing together.</p>
+      <p>Delivered within the meditation progress timeline, this feature captures users' mindset each day before their session. User sentiment is recirculated, with each meditation preceded by two collected snippets from the community — one from farther along in the journey, and one from an equal point. In this way, we establish a <a class="linker1" href="https://www.ted.com/talks/carol_dweck_the_power_of_believing_that_you_can_improve" target="_blank">growth mindset</a> where challenge is celebrated along the way by learning & sharing together.</p>
     </div>
     <div class="col s12">
       <center>
