--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -44,7 +44,7 @@
             <li class="itemer z-depth-1"><a class="lister" href="#">Market Validation</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Feature Proposition</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Product Requirements</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Live Demo</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Feature Demo</a></li>
          </ul>
         </li>
       </ul>
@@ -152,6 +152,11 @@
     <center>
       <h1 class="z-depth-2 linker1" id="link-out">Check Out the Demo in Action</h1>
     </center>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-10"></div>
+      </center>
+    </div>
   </div>
   <div class="row" id="footer">
       <div class="col s12">
