--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -148,6 +148,19 @@
       </center>
     </div>
   </div>
+    <div class="row container case">
+    <center>
+      <h1 class="z-depth-2">Success Metrics</h1>
+    </center>
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>When launched, this feature would begin A/B testing against a control with comparable mix. Performance dashboards established prior to release allow monitoring of the primary success metric: Time-Adjusted Progression. Users are broken into "vintages" and analyzed against their corresponding baseline cohort. Secondary metrics could include Feature Engagement, Progression Velocity and Net Promoter Score. As data flows in, a feature backlog forms and optimization begins.</p>
+    </div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="hs-image-11"></div>
+      </center>
+    </div>
+  </div>
   <div class="row container case">
     <center>
       <h1 class="z-depth-2 linker1" id="link-out">Check Out the Demo in Action</h1>
