--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -44,6 +44,7 @@
             <li class="itemer z-depth-1"><a class="lister" href="#">Market Validation</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Feature Proposition</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Product Requirements</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Success Metrics</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Feature Demo</a></li>
          </ul>
         </li>
