--- a/views/work.html
+++ b/views/work.html
@@ -47,7 +47,7 @@
     <div class="col s5" id="work-pane-left">
       <div class="col s12 work-pane" id="work-pane1">
         <div class="darkness valign-wrapper">
-          <p class="valign">HustlePuffin
+          <p class="valign">HustlePuffin PRM
           <br>
             <span>— view —</span>
           </p>
