--- a/views/headspace/hs-case.html
+++ b/views/headspace/hs-case.html
@@ -60,7 +60,7 @@
     <div class="col s1"></div>
     <div class="col s10 intro-text z-depth-1">
       <p>Headspace Feature Proposal<br>
-      <span>how to improve user retention with crowdsourced sentiment data</span>
+      <span>how to improve retention by allowing users to teach & learn from their community</span>
       </p>
     </div>
     <div class="col s2"></div>
